fixing the broken styles of resume and adding new pdf

--- a/portfolio/sass/resume.scss
+++ b/portfolio/sass/resume.scss
@@ -1,8 +1,15 @@
+@import "compass";
+@import "compass/reset";
+@import "variables";
+@import "fonts";
+
 body {
 
 	padding: 2.1em;
 	text-align: left;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 13px;
+	line-height: 1.4em;
 	background: white;
 	color: black;
 
@@ -11,14 +18,19 @@ body {
 h1 {
 
 	font-size: 1.5em;
+	font-weight: bold;
+	line-height: 1.2em;
+	margin-bottom: 0.8em;
 
 }
 
 h2 {
 
-	font-size: 1em;
 	margin-top: 2em;
 	margin-bottom: 1em;
+	font-weight: bold;
+	font-size: 1em;
+	line-height: 1.05em;
 
 
 }
@@ -29,17 +41,53 @@ p {
 
 }
 
+ul {
+	list-style: disc;
+}
+
+main {
+
+	max-width: 1400px;
+	margin: 0 auto;
+
+}
+
 section {
 
 	margin-bottom: 2em;
 
 	[class^="icon-"] {
 
+		margin-bottom: 3em;
 		float: left;
 		-webkit-print-color-adjust: exact;
 
+		&:before {
+		  display: inline-block;
+		  width: 2em;
+		  height: 2em;
+		  color: #464b59;
+		  background: #efe6c2;
+		  font-size: 2em;
+		  line-height: 2em;
+		  text-align: center;
+		  border-radius: 100%;
+		}
+
 	}
 
+}
+
+section:after {
+
+	content: "";
+	display: table;
+	clear: both;
+
+}
+
+section:last-child {
+  margin-bottom: 10em;
 }
 
 .profile-picture {
@@ -48,6 +96,9 @@ section {
 	height: 75px;
 	float: left;
 	margin-right: 2em;
+	margin-bottom: 1em;
+	border: none;
+	border-radius: 100%;
 
 }
 
